<resources>
    <string name="app_name">PasswordSaver</string>
    <string name="password_lock_image">Password Lock Image</string>
    <string name="login">LOGIN</string>
    <string name="type_username">Username</string>
    <string name="password">Password</string>
    <string name="press_register">Don\'t have an account ? click here to register</string>
    <string name="register">REGISTER</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="create_password">CREATE PASSWORD</string>
    <string name="enter_website">Enter Website</string>
    <string name="create_password_button">CREATE</string>
    <string name="credential_detail">Credential Details</string>
    <string name="username_detail">USERNAME</string>
    <string name="password_detail">PASSWORD</string>
    <string name="webiste_detail">WEBSITE</string>
</resources>