<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".uiActivity.LoginActivity"
    >



    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:contentDescription="@string/app_name"
       >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="@dimen/_150sdp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0"
                    android:contentDescription="@string/password_lock_image"
                    app:srcCompat="@drawable/lock_image" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="@dimen/_30ssp"
                    android:textColor="@color/black"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_14ssp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:hint="@string/type_username"
                    android:inputType="text"
                    android:layout_marginHorizontal="@dimen/_10sdp" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_marginHorizontal="@dimen/_10sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button"
                        android:background="@drawable/button_login"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_marginTop="@dimen/_18sdp"
                        android:layout_centerInParent="true"
                        android:text="@string/login" />
                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/navigate_to_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/press_register"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>