<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".uiActivity.CredentialDetailActivity"
    >


    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:contentDescription="@string/app_name"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="@dimen/_150sdp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0"
                    android:contentDescription="@string/password_lock_image"
                    app:srcCompat="@drawable/lock_image" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credential_detail"
                    android:textSize="@dimen/_30ssp"
                    android:textColor="@color/black"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_14ssp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_35sdp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username_detail"
                        android:textSize="@dimen/_18sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        />

                    <TextView
                        android:id="@+id/username_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10ssp"
                        android:text="USERNAME"
                        android:textSize="@dimen/_18sdp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_35sdp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_detail"
                        android:textSize="@dimen/_18sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        />

                    <TextView
                        android:id="@+id/password_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10ssp"
                        android:text="USERNAME"
                        android:textSize="@dimen/_18sdp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_35sdp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/webiste_detail"
                        android:textSize="@dimen/_18sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        />

                    <TextView
                        android:id="@+id/website_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10ssp"
                        android:text="USERNAME"
                        android:textSize="@dimen/_18sdp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>



            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>